Added a lot of functionality

--- a/Book-Store/Book-Store/Book-Store.csproj
+++ b/Book-Store/Book-Store/Book-Store.csproj
@@ -70,6 +70,7 @@
     <Content Include="CreateAccount.aspx" />
     <Content Include="CreatePost.aspx" />
     <Content Include="default.aspx" />
+    <Content Include="EditAccount.aspx" />
     <Content Include="Login.aspx" />
     <Content Include="Assets\placeholder.jpg" />
     <Content Include="View Listing.aspx" />
@@ -97,6 +98,14 @@
     <Compile Include="default.aspx.designer.cs">
       <DependentUpon>default.aspx</DependentUpon>
     </Compile>
+    <Compile Include="EditAccount.aspx.cs">
+      <DependentUpon>EditAccount.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="EditAccount.aspx.designer.cs">
+      <DependentUpon>EditAccount.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Listing.cs" />
     <Compile Include="Login.aspx.cs">
       <DependentUpon>Login.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -113,7 +122,9 @@
       <DependentUpon>View Listing.aspx</DependentUpon>
     </Compile>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Images\" />
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
