--- a/Book-Store/Book-Store/Web.config
+++ b/Book-Store/Book-Store/Web.config
@@ -8,4 +8,9 @@
     <compilation debug="true" targetFramework="4.6" />
     <httpRuntime targetFramework="4.6" />
   </system.web>
+  <connectionStrings>
+    <add name="databaseConnection"
+         providerName="System.Data.sqlClient"
+         connectionString="Data Source=.\ANTHONY-PC;Initial Catalog=bookstore;Integrated Security=True;MultipleActiveResultSets=True"/>
+  </connectionStrings>
 </configuration>
