--- a/Book-Store/Book-Store/bin/Book-Store.dll.config
+++ b/Book-Store/Book-Store/bin/Book-Store.dll.config
@@ -1,16 +1,25 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+  <!--
+    For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
+
+    The following attributes can be set on the <httpRuntime> tag.
+      <system.Web>
+        <httpRuntime targetFramework="4.5" />
+      </system.Web>
+  -->
   <system.web>
-    <compilation debug="true" targetFramework="4.6" />
-    <httpRuntime targetFramework="4.6" />
+    <compilation debug="true" targetFramework="4.5"/>
+    <httpRuntime targetFramework="4.5"/>
   </system.web>
   <connectionStrings>
-    <add name="databaseConnection"
-         providerName="System.Data.sqlClient"
-         connectionString="Data Source=.\ANTHONY-PC;Initial Catalog=bookstore;Integrated Security=True;MultipleActiveResultSets=True"/>
+    <add name="databaseConnection" providerName="System.Data.sqlClient" connectionString="Data Source=ANTHONY-PC;Initial Catalog=bookstore;Integrated Security=True"/>
   </connectionStrings>
+  <appSettings>
+    <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
+  </appSettings>
 </configuration>
